[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ppo_from_scratch"
version = "0.1.0"
description = "PPO implemented from scratch on top of transformers."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest==8.3.3"]
lint = ["ruff==0.15.4"]
typecheck = ["basedpyright==1.38.2"]
hook = [
    "ppo_from_scratch[lint,typecheck]",
    "pre_commit==4.0.1",
    "pytest==8.3.3",
]
dev = ["ppo_from_scratch[test,hook,typecheck]"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ppo_from_scratch = ["py.typed"]

[tool.ruff]
line-length = 119
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # style, syntax, imports
extend-select = ["RUF100"]  # audit unused noqa comments
ignore = ["E203"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-first-party = ["ppo_from_scratch"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]